# mellow

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-upload.yml  rust-clippy.yml
.sqlx/: query-130f98d47af26c51e9d31de112681d16c834c0204d39ac622c041b87358d0e3e.json  query-2452c8dd2a71b74f7855b59b66fd42f7c67476a88ef3efe95ccc08cb86fa3cf6.json  query-2f0245655959fd1b47f371c36008ec78d3cd19efce3f80ea32d816e724013ade.json  query-4f89ffb490bad833477dcef112ea981abb6a0b075faebc3999e5f7f5133168a0.json  query-8ff9cbdba3eb3b35290e4f609cadd236d1306542bdab86371ff242348eb787ae.json  query-98add7d836397a23c0173e3751b6844701ea3b0360dbc0523438b50f217063e0.json  query-c1d78c01078bc567a7044e08b84f30a5fe6cc156e83f3a7f899c4ff4a152814e.json  query-da3257580aac5f9ffb5ffede9760df0eb610a7876aa9ef7fbaedd88228fb938f.json  query-dfaa39ae59b5babf9b3023c49e1723ef8eef1d855def5794338bdc304629fa3a.json  query-f0762868d68647992ca362e85c05480670f29ae356f54ced3a7ebd697a905729.json  query-f14003e3dc61cd80eb2f36fbff9ef7b3571ed80760f37739df9228c6d86f64fd.json  query-f4a74ea443fd48c05cc963140b8e84ab4dce8f196399141dd1ff352834fe6a47.json  query-f5ac675109ccde1febd1cc6b7948e3bdcd6d65c270f12ce0eabf254af3975fac.json  query-f9e19a92298b8a67483b7624981ef1a2e9d7e57cd97d8756de590a783f913054.json  query-fb11a8629fd5103c322e0caea44970c807c87438b0e45d6d04e928c13f50adb7.json
crates/mellow/: Cargo.toml
crates/mellow/src/: database.rs  error.rs  fetch.rs  interaction.rs  main.rs  patreon.rs  roblox.rs  util.rs
crates/mellow/src/cache/: mod.rs
crates/mellow/src/commands/: mod.rs  server.rs  syncing.rs
crates/mellow/src/discord/: mod.rs
crates/mellow/src/discord/gateway/: context.rs  event_handler.rs  mod.rs
crates/mellow/src/discord/gateway/event/: guild.rs  interaction.rs  member.rs  message.rs  misc.rs  mod.rs  role.rs
crates/mellow/src/http/: mod.rs  routes.rs
crates/mellow/src/model/: mod.rs
crates/mellow/src/model/discord/: mod.rs  user.rs
crates/mellow/src/model/discord/guild/: member.rs  mod.rs  onboarding.rs  role.rs
crates/mellow/src/model/hakumi/: mod.rs
crates/mellow/src/model/hakumi/id/: marker.rs  mod.rs
crates/mellow/src/model/hakumi/user/: connection.rs  mod.rs
crates/mellow/src/model/mellow/: mod.rs
crates/mellow/src/model/mellow/server/: mod.rs  sync_action.rs  user_settings.rs
crates/mellow/src/server/: action_log.rs  logging.rs
crates/mellow/src/state/: mod.rs
crates/mellow/src/syncing/: mod.rs  sign_ups.rs
crates/mellow/src/visual_scripting/: action_tracker.rs  mod.rs  stream.rs  variable.rs
crates/mellow_cache/: Cargo.toml
crates/mellow_cache/src/: discord.rs  error.rs  hakumi.rs  lib.rs  mellow.rs  patreon.rs
crates/mellow_macros/: Cargo.toml
crates/mellow_models/: Cargo.toml
crates/mellow_models/src/: error.rs  lib.rs
crates/mellow_models/src/discord/: mod.rs  user.rs
crates/mellow_models/src/discord/guild/: member.rs  mod.rs  onboarding.rs  role.rs
crates/mellow_models/src/hakumi/: mod.rs  oauth_authorisation.rs
crates/mellow_models/src/hakumi/user/: connection.rs  mod.rs
crates/mellow_models/src/hakumi/visual_scripting/: mod.rs  variable.rs
crates/mellow_models/src/mellow/: mod.rs  sign_up.rs
crates/mellow_models/src/mellow/server/: command.rs  mod.rs  sync_action.rs  user_settings.rs
crates/mellow_models/src/patreon/: campaign.rs  mod.rs  user_identity.rs
crates/mellow_util/: Cargo.toml
crates/mellow_util/src/: fetch.rs  lib.rs
crates/mellow_util/src/hakuid/: marker.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
mellow/: Cargo.toml
mellow/src/: database.rs  discord.rs  error.rs  fetch.rs  http_service.rs  interaction.rs  main.rs  patreon.rs  roblox.rs  server.rs  syncing.rs  util.rs
mellow/src/cache/: mod.rs
mellow/src/commands/: mod.rs  server.rs  syncing.rs
mellow/src/discord/: mod.rs
mellow/src/discord/gateway/: context.rs  event_handler.rs  mod.rs
mellow/src/http/: mod.rs  routes.rs
mellow/src/model/discord/: mod.rs
mellow/src/model/discord/guild/: guild.rs  member.rs  mod.rs  onboarding.rs  role.rs
mellow/src/model/hakumi/: mod.rs
mellow/src/model/hakumi/user/: connection.rs  mod.rs  user.rs
mellow/src/model/mellow/: mod.rs
mellow/src/model/mellow/server/: mod.rs  server.rs  sync_action.rs  user_settings.rs
mellow/src/server/: action_log.rs  event.rs  logging.rs  mod.rs
mellow/src/syncing/: mod.rs  sign_ups.rs
mellow/src/traits/: avatar_url.rs  display_name.rs  mod.rs  partial.rs  quick_id.rs  with_id.rs
mellow/src/visual_scripting/: action_tracker.rs  mod.rs  stream.rs  variable.rs
