[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["katsumi143 <32640219+katsumi143@users.noreply.github.com>"]
edition = "2024"
license = "GPL-3.0-only"
version = "1.1.3"
homepage = "https://github.com/hakusoda/mellow"
repository = "https://github.com/hakusoda/mellow"
rust-version = "1.79"

[profile.dev]
lto = false
debug = true
rpath = false
panic = "unwind"
opt-level = 0
incremental = true
codegen-units = 256
overflow-checks = true
debug-assertions = true

[profile.release]
lto = true
strip = true
panic = "abort"
opt-level = 3
incremental = false
codegen-units = 1
debug-assertions = false