[package]
name = "mellow"
authors = ["katsumi143 <32640219+katsumi143@users.noreply.github.com>"]
version = "1.0.0"
description = "now here's the syncer"

readme = "../README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/hakusoda/mellow"
repository = "https://github.com/hakusoda/mellow"

edition = "2021"
rust-version = "1.73"

[dependencies]
hex = "0.4.3"
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.8.0", features = ["serde"] }
moka = { version = "0.12.5", features = ["future"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
chrono = { version = "0.4.37", features = ["serde"] }
tracing = "0.1.40"
futures = "0.3.30"
# postgrest is blocking upgrade to latest version :(
reqwest = { version = "0.11.27", features = ["json"] }
dashmap = { version = "5.5.3" }
mimalloc = "0.1.39"
actix-web = "4.5.1"
postgrest = "1.6.0"
once_cell = "1.19.0"
thiserror = "1.0.58"
simd-json = "0.13.9"
tokio-util = "0.7.10"
serde_repr = "0.1.18"
serde_json = "1.0.115"
tracing-log = "0.2.0"
signal-hook = "0.3.17"
derive_more = "0.99.17"
futures-util = "0.3.30"
tracing-error = "0.2.0"
mellow_macros = { path = "../macros" }
twilight-http = { version = "0.15.4", features = ["simd-json"] }
twilight-util = { version = "0.15.4", features = ["builder"] }
twilight-model = "0.15.4"
async-recursion = "1.1.0"
twilight-gateway = { version = "0.15.4", features = ["simd-json"] }
twilight-validate = "0.15.3"
tracing-subscriber = "0.3.18"