cargo-features = ["edition2024"]

[package]
name = "mellow"
description = "now here's the syncer"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hex = "0.4.3"
url = "2.5.0"
hmac = "0.12.1"
sha2 = "0.10.8"
uuid = { version = "1.8.0", features = ["serde"] }
moka = { version = "0.12.7", features = ["future"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.200", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
tracing = "0.1.40"
futures = "0.3.30"
dashmap = { version = "5.5.3", features = ["inline"] }
reqwest = { version = "0.12.4", features = ["json"] }
mimalloc = "0.1.41"
actix-web = "4.5.1"
once_cell = "1.19.0"
thiserror = "1.0.59"
simd-json = "0.13.10"
postgrest = { git = "https://github.com/hakusoda/postgrest-rs.git", tag = "v0.1.1", features = ["simd-json"] }
url-escape = "0.1.1"
tokio-util = "0.7.11"
serde_repr = "0.1.19"
serde_json = "1.0.116"
tracing-log = "0.2.0"
signal-hook = "0.3.17"
derive_more = "0.99.17"
futures-util = "0.3.30"
tracing-error = "0.2.0"
mellow_macros = { path = "../mellow_macros" }
twilight-http = { version = "0.15.4", features = ["simd-json"] }
twilight-util = { version = "0.15.4", features = ["builder"] }
twilight-model = "0.15.4"
async-recursion = "1.1.1"
twilight-gateway = { version = "0.15.4", features = ["simd-json"] }
twilight-validate = "0.15.3"
tracing-subscriber = "0.3.18"