cargo-features = ["edition2024"]

[package]
name = "mellow"
description = "now here's the syncer"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
actix-web = "4.8.0"
async-recursion = "1.1.1"
chrono.workspace = true
dashmap.workspace = true
derive_more = "0.99.18"
futures.workspace = true
hex = "0.4.3"
hmac = "0.12.1"
mellow_cache.path = "../mellow_cache"
mellow_macros.path = "../mellow_macros"
mellow_models.path = "../mellow_models"
mellow_util.path = "../mellow_util"
once_cell = "1.19.0"
reqwest.workspace = true
sha2 = "0.10.8"
serde.workspace = true
serde_json = "1.0.118"
serde_repr.workspace = true
simd-json.workspace = true
sqlx.workspace = true
thiserror = "1.0.61"
tokio.workspace = true
tokio-util = "0.7.11"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
twilight-gateway.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
twilight-util.workspace = true
twilight-validate = "0.15.3"
url = "2.5.2"
uuid = { version = "1.9.1", features = ["serde"] }