cargo-features = ["edition2024"]

[package]
name = "mellow_cache"
description = "mellow"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
dashmap.workspace = true
mellow_models.path = "../mellow_models"
mellow_util.path = "../mellow_util"
once_cell.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
simd-json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
twilight-model.workspace = true