cargo-features = ["edition2024"]

[package]
name = "mellow_macros"
description = "slash command proc-macros for mellow"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = "2.0.72"
quote = "1.0.36"
darling = "0.20.9"
proc-macro2 = "1.0.85"