cargo-features = ["edition2024"]

[package]
name = "mellow_models"
description = "mellow"

authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
dashmap.workspace = true
futures.workspace = true
mellow_util.path = "../mellow_util"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
simd-json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true